--- a/src/Macrosharp.UserInterfaces/Macrosharp.UserInterfaces.TrayIcon/Macrosharp.UserInterfaces.TrayIcon.csproj
+++ b/src/Macrosharp.UserInterfaces/Macrosharp.UserInterfaces.TrayIcon/Macrosharp.UserInterfaces.TrayIcon.csproj
@@ -3,5 +3,10 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Macrosharp.Win32\Macrosharp.Win32.Native\Macrosharp.Win32.Native.csproj" />
+  </ItemGroup>
 </Project>
