Update project references and improve code formatting across multiple files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
 		"**/bin": true,
 		"**/CVS": true,
 		"**/obj": true,
-		"src/assets": true
+		"src/assets": false
 	},
     "explorerExclude.backup": {},
     "explorer.excludeGitIgnore": true,
@@ -24,10 +24,12 @@
 		"ABNT",
 		"AFXFIRST",
 		"AFXLAST",
+		"argb",
 		"ASKCBFORMATNAME",
 		"CHANGECBCHAIN",
 		"CHANGEUISTATE",
 		"CHARTOITEM",
+		"CREATESTRUCTW",
 		"CRSEL",
 		"CTLCOLORBTN",
 		"CTLCOLORDLG",
@@ -38,9 +40,12 @@
 		"CTLCOLORSTATIC",
 		"CUSEL",
 		"CXSCREEN",
+		"CXSMICON",
 		"CYSCREEN",
+		"CYSMICON",
 		"DBCSCHAR",
 		"DEVMODECHANGE",
+		"DKGRAY",
 		"Enlw",
 		"ENLW",
 		"ENTERDLGCONVERSIONMODE",
@@ -49,15 +54,21 @@
 		"EREOF",
 		"EXSEL",
 		"EXSTYLE",
+		"FTYPE",
 		"GETDLGCODE",
+		"GWLP",
 		"Hanguel",
 		"HANGUEL",
 		"Hanja",
 		"HANJA",
+		"HBITMAP",
+		"hbmp",
+		"HGDIOBJ",
 		"HHOOK",
 		"HIWORD",
 		"HMENU",
 		"HREDRAW",
+		"HRESULT",
 		"HSCROLLCLIPBOARD",
 		"HWHEEL",
 		"HWNDNEXT",
@@ -65,6 +76,7 @@
 		"IDCANCEL",
 		"INSERTCOLUMNW",
 		"INSERTITEMW",
+		"istep",
 		"Jisho",
 		"JISHO",
 		"Junja",
@@ -85,7 +97,10 @@
 		"Loya",
 		"LOYA",
 		"lpfn",
+		"lpmii",
+		"lprc",
 		"lpsz",
+		"lptpm",
 		"LSHIFT",
 		"LVCF",
 		"LVCOLUMNW",
@@ -110,8 +125,10 @@
 		"MDIRESTORE",
 		"MDISETMENU",
 		"MDITILE",
+		"MENUITEMINFOW",
 		"MENURBUTTONUP",
 		"MIDDLEUP",
+		"MIIM",
 		"MOUSEEVENTF",
 		"MYCUSTOMMESSAGE",
 		"NCACTIVATE",
@@ -141,6 +158,8 @@
 		"NOMOVE",
 		"NONAME",
 		"NOSIZE",
+		"NOTIFYICONDATA",
+		"NOTIFYICONDATAW",
 		"NOTOPMOST",
 		"NOZORDER",
 		"Numpad",
