--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,8 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="ErrorOr" Version="2.1.0" />
-    <PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.183" />
-    <PackageVersion Include="System.Drawing.Common" Version="10.0.0-preview.5.25277.114" />
-    <PackageVersion Include="System.Windows.Extensions" Version="10.0.0-preview.5.25277.114" />
+    <PackageVersion Include="PdfSharpCore" Version="1.3.67" />
+    <PackageVersion Include="System.Drawing.Common" Version="10.0.2" />
+    <PackageVersion Include="System.Windows.Extensions" Version="10.0.2" />
+    <PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.269" />
   </ItemGroup>
 </Project>
