Add Explorer automation and audio helpers

--- a/src/Macrosharp.Win32/Macrosharp.Win32.Abstractions/Macrosharp.Win32.Abstractions.csproj
+++ b/src/Macrosharp.Win32/Macrosharp.Win32.Abstractions/Macrosharp.Win32.Abstractions.csproj
@@ -16,5 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Macrosharp.Win32.Native\Macrosharp.Win32.Native.csproj" />
+    <ProjectReference Include="..\..\Macrosharp.Infrastructure\Macrosharp.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
