--- a/src/Macrosharp.UserInterfaces/Macrosharp.UserInterfaces.DynamicWindow/Macrosharp.UserInterfaces.DynamicWindow.csproj
+++ b/src/Macrosharp.UserInterfaces/Macrosharp.UserInterfaces.DynamicWindow/Macrosharp.UserInterfaces.DynamicWindow.csproj
@@ -13,6 +13,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Macrosharp.Win32\Macrosharp.Win32.Abstractions\Macrosharp.Win32.Abstractions.csproj" />
     <ProjectReference Include="..\..\Macrosharp.Win32\Macrosharp.Win32.Native\Macrosharp.Win32.Native.csproj" />
-    <ProjectReference Include="..\..\Macrosharp.Devices\Macrosharp.Devices.Keyboard\Macrosharp.Devices.Keyboard.csproj" />
+    <ProjectReference Include="..\..\Macrosharp.Devices\Macrosharp.Devices.Core\Macrosharp.Devices.Core.csproj" />
   </ItemGroup>
 </Project>
