--- a/src/Macrosharp.Hosts/Macrosharp.Hosts.Console/Macrosharp.Hosts.Console.csproj
+++ b/src/Macrosharp.Hosts/Macrosharp.Hosts.Console/Macrosharp.Hosts.Console.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
@@ -21,5 +21,6 @@
     <ProjectReference Include="..\..\Macrosharp.Win32\Macrosharp.Win32.Abstractions\Macrosharp.Win32.Abstractions.csproj" />
     <ProjectReference Include="..\..\Macrosharp.Win32\Macrosharp.Win32.Native\Macrosharp.Win32.Native.csproj" />
     <ProjectReference Include="..\..\Macrosharp.Devices\Macrosharp.Devices.Keyboard\Macrosharp.Devices.Keyboard.csproj" />
+    <ProjectReference Include="..\..\Macrosharp.Devices\Macrosharp.Devices.Mouse\Macrosharp.Devices.Mouse.csproj" />
   </ItemGroup>
 </Project>
