feat(trayicon): Add IconCycler class for round-robin icon cycling and update README feat(imageeditor): Enhance README with detailed usage examples and features refactor(imageeditor): Clean up code formatting and remove unnecessary whitespace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,11 +24,13 @@
 		"ABNT",
 		"AFXFIRST",
 		"AFXLAST",
+		"apidl",
 		"argb",
 		"ASKCBFORMATNAME",
 		"CHANGECBCHAIN",
 		"CHANGEUISTATE",
 		"CHARTOITEM",
+		"cidl",
 		"CREATESTRUCTW",
 		"CRSEL",
 		"CTLCOLORBTN",
@@ -56,6 +58,7 @@
 		"EXSTYLE",
 		"FTYPE",
 		"GETDLGCODE",
+		"GMEM",
 		"GWLP",
 		"Hanguel",
 		"HANGUEL",
@@ -72,8 +75,10 @@
 		"HSCROLLCLIPBOARD",
 		"HWHEEL",
 		"HWNDNEXT",
+		"IBEAM",
 		"ICONERASEBKGND",
 		"IDCANCEL",
+		"IDYES",
 		"INSERTCOLUMNW",
 		"INSERTITEMW",
 		"istep",
@@ -130,6 +135,8 @@
 		"MIDDLEUP",
 		"MIIM",
 		"MOUSEEVENTF",
+		"MOUSEHWHEEL",
+		"MSLLHOOKSTRUCT",
 		"MYCUSTOMMESSAGE",
 		"NCACTIVATE",
 		"NCCALCSIZE",
@@ -164,8 +171,14 @@
 		"NOZORDER",
 		"Numpad",
 		"NUMPAD",
+		"OPENFILENAMEW",
+		"PAINTSTRUCT",
 		"PALETTEISCHANGING",
 		"PCWSTR",
+		"pidl",
+		"Pidl",
+		"Pidls",
+		"ppidl",
 		"QUERYUISTATE",
 		"RALT",
 		"RBUTTONDBLCLK",
@@ -174,16 +187,21 @@
 		"RCONTROL",
 		"RCTRL",
 		"RMENU",
+		"rmproj",
 		"Roya",
 		"ROYA",
 		"RSHIFT",
+		"rwildcard",
 		"RWIN",
 		"SBCSCHAR",
+		"sfgao",
+		"SVSI",
 		"SYSCHAR",
 		"SYSCOLORCHANGE",
 		"SYSCOMMAND",
 		"SYSDEADCHAR",
 		"SYSKEYUP",
+		"Tarek",
 		"TCARD",
 		"Touroku",
 		"TOUROKU",
