--- a/src/Macrosharp.UserInterfaces/Macrosharp.UserInterfaces.ToastNotifications/Macrosharp.UserInterfaces.ToastNotifications.csproj
+++ b/src/Macrosharp.UserInterfaces/Macrosharp.UserInterfaces.ToastNotifications/Macrosharp.UserInterfaces.ToastNotifications.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net10.0-windows10.0.17763.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 </Project>
